--- a/assets/css/blocks/_any-stand-alone-block.scss
+++ b/assets/css/blocks/_any-stand-alone-block.scss
@@ -1,6 +1,8 @@
 .animated {
     opacity: 0;
     transition: opacity 0.3s 0.5s;
+    margin: 400px 0;
+    text-align: center;
 
     &.visible {
         opacity: 1;
@@ -18,4 +20,57 @@
         text-decoration: inherit;
     }
 
+}
+
+.eye-holder {
+    display: flex;
+    flex-wrap: wrap;
+    width: 780px;
+    margin: 0 -40px;
+    background-color: $gray;
+    padding: 60px;
+}
+
+.eye {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    background-image: linear-gradient(to top, tomato, $white);
+    border-radius: 50%;
+    margin: 0 40px;
+    box-shadow: 0 0 0 4px rgba(red, .3);
+    //transition: transform .5s;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 50%;
+        transform: translateX(50%);
+        width: 64px;
+        height: 64px;
+        border-radius: 50%;
+        background-color: black;
+    }
+
+
+   /* &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 2px;
+        height: 2px;
+        background-color: black;
+    }*/
+}
+
+.mouth {
+    margin-top: 60px;
+    width: 100%;
+    height: 80px;
+    border: 20px solid tomato;
+    border-bottom-color: transparent;
+    border-radius: 730px 730px / 180px 180px;
 }
