--- a/assets/css/blocks/_any-stand-alone-block.scss
+++ b/assets/css/blocks/_any-stand-alone-block.scss
@@ -39,9 +39,9 @@
     border-radius: 50%;
     margin: 0 40px;
     box-shadow: 0 0 0 4px rgba(red, .3);
-    //transition: transform .5s;
+    //transition: .7s 0.1s;
 
-    &::after {
+    &::after, &::before {
         content: '';
         position: absolute;
         top: 0;
@@ -53,17 +53,13 @@
         background-color: black;
     }
 
-
-   /* &::before {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 2px;
-        height: 2px;
-        background-color: black;
-    }*/
+    &::before {
+        background-color: $white;
+        z-index: 0;
+        width: 84px;
+        height: 84px;
+        box-shadow: 0 10px 15px 10px rgba(red, .5);
+    }
 }
 
 .mouth {
